// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser #parse happy path arithmitic "=(2+3)*5" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": BinaryOp {
    "_name": "BinaryOp",
    "leftNode": NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 2,
        "text": "2",
        "type": "NUMBER",
        "value": 2,
        "whitespace": 0,
      },
    },
    "opNode": Token {
      "category": "operator",
      "html": null,
      "index": 3,
      "text": "+",
      "type": "PLUS",
      "value": null,
      "whitespace": 0,
    },
    "rightNode": NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 4,
        "text": "3",
        "type": "NUMBER",
        "value": 3,
        "whitespace": 0,
      },
    },
  },
  "opNode": Token {
    "category": "operator",
    "html": null,
    "index": 6,
    "text": "*",
    "type": "MULT",
    "value": null,
    "whitespace": 0,
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "node": Token {
      "category": "entity",
      "html": null,
      "index": 7,
      "text": "5",
      "type": "NUMBER",
      "value": 5,
      "whitespace": 0,
    },
  },
}
`;

exports[`Parser #parse happy path arithmitic "=2" 1`] = `
NumberNode {
  "_name": "NumberNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "2",
    "type": "NUMBER",
    "value": 2,
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path arithmitic "=2+-3" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": NumberNode {
    "_name": "NumberNode",
    "node": Token {
      "category": "entity",
      "html": null,
      "index": 1,
      "text": "2",
      "type": "NUMBER",
      "value": 2,
      "whitespace": 0,
    },
  },
  "opNode": Token {
    "category": "operator",
    "html": null,
    "index": 2,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": 0,
  },
  "rightNode": UnaryOp {
    "_name": "UnaryOp",
    "expr": NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 4,
        "text": "3",
        "type": "NUMBER",
        "value": 3,
        "whitespace": 0,
      },
    },
    "opNode": Token {
      "category": "operator",
      "html": null,
      "index": 3,
      "text": "-",
      "type": "MINUS",
      "value": null,
      "whitespace": 0,
    },
  },
}
`;

exports[`Parser #parse happy path arithmitic "=2+3" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": NumberNode {
    "_name": "NumberNode",
    "node": Token {
      "category": "entity",
      "html": null,
      "index": 1,
      "text": "2",
      "type": "NUMBER",
      "value": 2,
      "whitespace": 0,
    },
  },
  "opNode": Token {
    "category": "operator",
    "html": null,
    "index": 2,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": 0,
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "node": Token {
      "category": "entity",
      "html": null,
      "index": 3,
      "text": "3",
      "type": "NUMBER",
      "value": 3,
      "whitespace": 0,
    },
  },
}
`;

exports[`Parser #parse happy path arithmitic "=2+3/10+8" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": BinaryOp {
    "_name": "BinaryOp",
    "leftNode": NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 1,
        "text": "2",
        "type": "NUMBER",
        "value": 2,
        "whitespace": 0,
      },
    },
    "opNode": Token {
      "category": "operator",
      "html": null,
      "index": 2,
      "text": "+",
      "type": "PLUS",
      "value": null,
      "whitespace": 0,
    },
    "rightNode": BinaryOp {
      "_name": "BinaryOp",
      "leftNode": NumberNode {
        "_name": "NumberNode",
        "node": Token {
          "category": "entity",
          "html": null,
          "index": 3,
          "text": "3",
          "type": "NUMBER",
          "value": 3,
          "whitespace": 0,
        },
      },
      "opNode": Token {
        "category": "operator",
        "html": null,
        "index": 4,
        "text": "/",
        "type": "DIV",
        "value": null,
        "whitespace": 0,
      },
      "rightNode": NumberNode {
        "_name": "NumberNode",
        "node": Token {
          "category": "entity",
          "html": null,
          "index": 5,
          "text": "10",
          "type": "NUMBER",
          "value": 10,
          "whitespace": 0,
        },
      },
    },
  },
  "opNode": Token {
    "category": "operator",
    "html": null,
    "index": 7,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": 0,
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "node": Token {
      "category": "entity",
      "html": null,
      "index": 8,
      "text": "8",
      "type": "NUMBER",
      "value": 8,
      "whitespace": 0,
    },
  },
}
`;

exports[`Parser #parse happy path cells "= A1 +5" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": CellNode {
    "_name": "CellNode",
    "cell": Token {
      "category": "entity",
      "html": null,
      "index": 2,
      "text": "A1",
      "type": "CELL",
      "value": "A-1",
      "whitespace": 1,
    },
  },
  "opNode": Token {
    "category": "operator",
    "html": null,
    "index": 5,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": 1,
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "node": Token {
      "category": "entity",
      "html": null,
      "index": 6,
      "text": "5",
      "type": "NUMBER",
      "value": 5,
      "whitespace": 0,
    },
  },
}
`;

exports[`Parser #parse happy path cells "=A1" 1`] = `
CellNode {
  "_name": "CellNode",
  "cell": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "A1",
    "type": "CELL",
    "value": "A-1",
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path cells "=A1+ B2" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": CellNode {
    "_name": "CellNode",
    "cell": Token {
      "category": "entity",
      "html": null,
      "index": 1,
      "text": "A1",
      "type": "CELL",
      "value": "A-1",
      "whitespace": 0,
    },
  },
  "opNode": Token {
    "category": "operator",
    "html": null,
    "index": 3,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": 0,
  },
  "rightNode": CellNode {
    "_name": "CellNode",
    "cell": Token {
      "category": "entity",
      "html": null,
      "index": 5,
      "text": "B2",
      "type": "CELL",
      "value": "B-2",
      "whitespace": 1,
    },
  },
}
`;

exports[`Parser #parse happy path formulas "=sum(5)" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 5,
        "text": "5",
        "type": "NUMBER",
        "value": 5,
        "whitespace": 0,
      },
    },
  ],
  "funcNode": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "sum",
    "type": "FUNCTION",
    "value": [Function],
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path formulas "=sum(5, SUM(7,6) ,  (10+5/7))" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 5,
        "text": "5",
        "type": "NUMBER",
        "value": 5,
        "whitespace": 0,
      },
    },
    FuncOp {
      "_name": "FuncOp",
      "argNodes": Array [
        NumberNode {
          "_name": "NumberNode",
          "node": Token {
            "category": "entity",
            "html": null,
            "index": 12,
            "text": "7",
            "type": "NUMBER",
            "value": 7,
            "whitespace": 0,
          },
        },
        NumberNode {
          "_name": "NumberNode",
          "node": Token {
            "category": "entity",
            "html": null,
            "index": 14,
            "text": "6",
            "type": "NUMBER",
            "value": 6,
            "whitespace": 0,
          },
        },
      ],
      "funcNode": Token {
        "category": "entity",
        "html": null,
        "index": 8,
        "text": "SUM",
        "type": "FUNCTION",
        "value": [Function],
        "whitespace": 1,
      },
    },
    BinaryOp {
      "_name": "BinaryOp",
      "leftNode": NumberNode {
        "_name": "NumberNode",
        "node": Token {
          "category": "entity",
          "html": null,
          "index": 21,
          "text": "10",
          "type": "NUMBER",
          "value": 10,
          "whitespace": 0,
        },
      },
      "opNode": Token {
        "category": "operator",
        "html": null,
        "index": 23,
        "text": "+",
        "type": "PLUS",
        "value": null,
        "whitespace": 0,
      },
      "rightNode": BinaryOp {
        "_name": "BinaryOp",
        "leftNode": NumberNode {
          "_name": "NumberNode",
          "node": Token {
            "category": "entity",
            "html": null,
            "index": 24,
            "text": "5",
            "type": "NUMBER",
            "value": 5,
            "whitespace": 0,
          },
        },
        "opNode": Token {
          "category": "operator",
          "html": null,
          "index": 25,
          "text": "/",
          "type": "DIV",
          "value": null,
          "whitespace": 0,
        },
        "rightNode": NumberNode {
          "_name": "NumberNode",
          "node": Token {
            "category": "entity",
            "html": null,
            "index": 26,
            "text": "7",
            "type": "NUMBER",
            "value": 7,
            "whitespace": 0,
          },
        },
      },
    },
  ],
  "funcNode": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "sum",
    "type": "FUNCTION",
    "value": [Function],
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path formulas "=sum(5,6)" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 5,
        "text": "5",
        "type": "NUMBER",
        "value": 5,
        "whitespace": 0,
      },
    },
    NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 7,
        "text": "6",
        "type": "NUMBER",
        "value": 6,
        "whitespace": 0,
      },
    },
    NumberNode {
      "_name": "NumberNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 9,
        "text": "7",
        "type": "NUMBER",
        "value": 7,
        "whitespace": 0,
      },
    },
  ],
  "funcNode": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "sum",
    "type": "FUNCTION",
    "value": [Function],
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path formulas "=sum(A1:B2, C1)" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    CellRange {
      "_name": "CellRange",
      "leftCell": CellNode {
        "_name": "CellNode",
        "cell": Token {
          "category": "entity",
          "html": null,
          "index": 5,
          "text": "A1",
          "type": "CELL",
          "value": "A-1",
          "whitespace": 0,
        },
      },
      "rightCell": CellNode {
        "_name": "CellNode",
        "cell": Token {
          "category": "entity",
          "html": null,
          "index": 8,
          "text": "B2",
          "type": "CELL",
          "value": "B-2",
          "whitespace": 0,
        },
      },
    },
    CellNode {
      "_name": "CellNode",
      "cell": Token {
        "category": "entity",
        "html": null,
        "index": 12,
        "text": "C1",
        "type": "CELL",
        "value": "C-1",
        "whitespace": 1,
      },
    },
  ],
  "funcNode": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "sum",
    "type": "FUNCTION",
    "value": [Function],
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path formulas "=sum(B2:A1, C2:D4)" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    CellRange {
      "_name": "CellRange",
      "leftCell": CellNode {
        "_name": "CellNode",
        "cell": Token {
          "category": "entity",
          "html": null,
          "index": 8,
          "text": "A1",
          "type": "CELL",
          "value": "A-1",
          "whitespace": 0,
        },
      },
      "rightCell": CellNode {
        "_name": "CellNode",
        "cell": Token {
          "category": "entity",
          "html": null,
          "index": 5,
          "text": "B2",
          "type": "CELL",
          "value": "B-2",
          "whitespace": 0,
        },
      },
    },
    CellRange {
      "_name": "CellRange",
      "leftCell": CellNode {
        "_name": "CellNode",
        "cell": Token {
          "category": "entity",
          "html": null,
          "index": 12,
          "text": "C2",
          "type": "CELL",
          "value": "C-2",
          "whitespace": 1,
        },
      },
      "rightCell": CellNode {
        "_name": "CellNode",
        "cell": Token {
          "category": "entity",
          "html": null,
          "index": 15,
          "text": "D4",
          "type": "CELL",
          "value": "D-4",
          "whitespace": 0,
        },
      },
    },
  ],
  "funcNode": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "sum",
    "type": "FUNCTION",
    "value": [Function],
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path formulas '=CONCAT("str1"," str2 ")' 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    StringNode {
      "_name": "StringNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 8,
        "text": "\\"str1\\"",
        "type": "STRING",
        "value": "str1",
        "whitespace": 0,
      },
    },
    StringNode {
      "_name": "StringNode",
      "node": Token {
        "category": "entity",
        "html": null,
        "index": 15,
        "text": "\\" str2 \\"",
        "type": "STRING",
        "value": " str2 ",
        "whitespace": 0,
      },
    },
  ],
  "funcNode": Token {
    "category": "entity",
    "html": null,
    "index": 1,
    "text": "CONCAT",
    "type": "FUNCTION",
    "value": [Function],
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path strings "  2" 1`] = `
TextNode {
  "_name": "TextNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": 0,
    "text": "  2",
    "type": "TEXT",
    "value": null,
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path strings "  2+" 1`] = `
TextNode {
  "_name": "TextNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": 0,
    "text": "  2+",
    "type": "TEXT",
    "value": null,
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path strings "  2+3" 1`] = `
TextNode {
  "_name": "TextNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": 0,
    "text": "  2+3",
    "type": "TEXT",
    "value": null,
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path strings "  text" 1`] = `
TextNode {
  "_name": "TextNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": 0,
    "text": "  text",
    "type": "TEXT",
    "value": null,
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path strings " " 1`] = `
TextNode {
  "_name": "TextNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": 0,
    "text": " ",
    "type": "TEXT",
    "value": null,
    "whitespace": 0,
  },
}
`;

exports[`Parser #parse happy path strings "" 1`] = `
NumberNode {
  "_name": "NumberNode",
  "node": Token {
    "category": "entity",
    "html": null,
    "index": -1,
    "text": "0",
    "type": "NUMBER",
    "value": 0,
    "whitespace": 0,
  },
}
`;
